# texthooker

./: .envrc  .gitignore  .nvim.lua  Cargo.toml  Trunk.toml  eslint.config.js  flake.nix  index.html  package-lock.json  package.json  styles-177d6340b9d560c4.css  styles-278f2571ec4b92a3.css  styles-b94c5a7f9b7d9146.css  styles-cb286fddd63c4ab.css  styles.css  texthooker-6f772d7cfab07146.js  texthooker-6f772d7cfab07146_bg.wasm  texthooker-a40f35a8b63e52a6.js  texthooker-a40f35a8b63e52a6_bg.wasm  texthooker-bcc67520988e7e31.js  texthooker-bcc67520988e7e31_bg.wasm  texthooker-fc0d48993f2617d7.js  texthooker-fc0d48993f2617d7_bg.wasm  vite.config.ts
.github/workflows/: main.yml
assets/: index-B2jS4ZJ1.css  index-BY2Gf6Jc.js  index-BY2Gf6Jc.js.map  index-CKtab-jR.css  index-DKmgE39V.js  index-DKmgE39V.js.map  index-DP9M65el.js  index-DP9M65el.js.map  index-hwuJ-o0p.js  index-hwuJ-o0p.js.map  index-j2vfXwMT.js  index-j2vfXwMT.js.map  index-yp884lLu.js  index-yp884lLu.js.map
src/: App.module.css  App.tsx  State.tsx  main.rs
