[package]
name = "texthooker"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.9", features = ["csr", "nightly"] }
leptos-use = "0.16.2"
leptos_meta = "0.8.5"
normalize-line-endings = "0.3.0"
serde = { version = "1.0.226", features = ["derive"] }
stylance = "0.7.1"
web-sys = { version = "0.3.80", features = ["Selection"] }
