[package]
name = "texthooker"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.17", features = ["csr", "nightly"] }
leptos-use = "0.18.3"
leptos_meta = "0.8.6"
normalize-line-endings = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
stylance = "0.7.4"
web-sys = { version = "0.3.94", features = ["Selection"] }
